feat:templates and dashboard layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -99,3 +99,10 @@ html,body,:root{
   outline: none !important;
   box-shadow: none !important;
 }
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
